--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="https://gmpg.org/xfn/11">
 
-<title>Elon Ai &#8211; USDT Rewards</title>
+<title>PopCatRock &#8211; PopCat on Bitrock</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
 <link rel="alternate" type="application/rss+xml" title="Elon Musk CEO &raquo; Feed" href="feed/index.html" />
@@ -207,7 +207,7 @@ class="hfeed site" id="page">
 					<div class="ast-site-title-wrap">
 						<h1 class="site-title" itemprop="name">
 				<a href="index.html" rel="home" itemprop="url" >
-					Elon Artificial Intelligence
+					PopCatRock
 				</a>
 			</h1>
 						
@@ -226,7 +226,7 @@ class="hfeed site" id="page">
 <li id="menu-item-92" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-92"><a href="#socials" class="menu-link">Socials</a></li>
 </ul></div></nav></div></div>		</div>
 				<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-button-1" data-section="section-hb-button-1">
-			<div class="ast-builder-button-wrap ast-builder-button-size-sm"><a class="ast-custom-button-link" href="#" target="_self" ><div class=ast-custom-button>Whitepaper</div></a><a class="menu-link" href="https://dashboard.#/" target="_self" >Dashboard</a></div>		</div>
+			<div class="ast-builder-button-wrap ast-builder-button-size-sm"><a class="ast-custom-button-link" href="#" target="_self" ><div class=ast-custom-button>Buy</div></a><a class="menu-link" href="https://dashboard.#/" target="_self" >Dashboard</a></div>		</div>
 						<div class="ast-builder-layout-element site-header-focus-item ast-header-button-3" data-section="section-hb-button-3">
 					<!-- <div class="ast-builder-button-wrap ast-builder-button-size-sm"><a class="ast-custom-button-link" href="https://swap./" target="_self" ><div class=ast-custom-button>Swap</div></a><a class="menu-link" href="https://swap./" target="_self" >Swap</a></div>				</div> -->
 											</div>
