--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				</div>
 				<div class="elementor-element elementor-element-42d3c76c elementor-widget elementor-widget-heading" data-id="42d3c76c" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Install Trust Wallet / MetaMask</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Install MetaMask / MetaMask</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-2f04a31f elementor-widget elementor-widget-text-editor" data-id="2f04a31f" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
@@ -733,12 +733,12 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				</div>
 				<div class="elementor-element elementor-element-47c4592f elementor-widget elementor-widget-heading" data-id="47c4592f" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Deposit BNB to Trust Wallet
+			<h2 class="elementor-heading-title elementor-size-default">Deposit BROCK to your Wallet
 </h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-6432e181 elementor-widget elementor-widget-text-editor" data-id="6432e181" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>After Successfully Creating Your Wallet, Purchase BNB By Highlighting BNB and Pressing The “BUY” Button. Purchase Desired Amount Of BNB via Credit Card Or Bank Account.</p>						</div>
+							<p>After Successfully Creating Your Wallet, Obtain $BROCK by either bridging or buying it on exchanges like Bitmart.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -754,12 +754,12 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				</div>
 				<div class="elementor-element elementor-element-6a2f8a86 elementor-widget elementor-widget-heading" data-id="6a2f8a86" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Visit Pancakeswap
+			<h2 class="elementor-heading-title elementor-size-default">Visit Rockswap
 </h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-52ce78e0 elementor-widget elementor-widget-text-editor" data-id="52ce78e0" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Connect Your Wallet To Pancakeswap (<a class="text-entity-link" dir="auto" title="https://pancakeswap.finance/swap" href="https://pancakeswap.finance/swap" target="_blank" rel="noopener noreferrer" data-entity-type="MessageEntityUrl">https://pancakeswap.finance/swap</a>) On Your Phone Or Desktop (Same Device As A Wallet) On Your Web Browser Go To <a class="text-entity-link" dir="auto" title="https://pancakeswap.finance/swap" href="https://pancakeswap.finance/swap" target="_blank" rel="noopener noreferrer" data-entity-type="MessageEntityUrl">https://pancakeswap.finance/swap</a> and Click Connect Wallet.</p>						</div>
+							<p>Connect Your Wallet To Rockswap (<a class="text-entity-link" dir="auto" title="swap" href="https://rock-swap.io/#/swap?outputCurrency=0x4c6e58a52b140db90338075197ca7d2d3ea142c9" target="_blank" rel="noopener noreferrer" data-entity-type="MessageEntityUrl">https://rock-swap.io/#/swap?outputCurrency=0x4c6e58a52b140db90338075197ca7d2d3ea142c9</a>) On Your Phone Or Desktop (Same Device As A Wallet) On Your Web Browser Go To <a class="text-entity-link" dir="auto" title="https://rock-swap.io/#/swap?outputCurrency=0x4c6e58a52b140db90338075197ca7d2d3ea142c9" href="https://rock-swap.io/#/swap?outputCurrency=0x4c6e58a52b140db90338075197ca7d2d3ea142c9" target="_blank" rel="noopener noreferrer" data-entity-type="MessageEntityUrl">https://rock-swap.io/#/swap?outputCurrency=0x4c6e58a52b140db90338075197ca7d2d3ea142c9</a> and Click Connect Wallet.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -771,11 +771,11 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				</div>
 				<div class="elementor-element elementor-element-3cad61d8 elementor-widget elementor-widget-heading" data-id="3cad61d8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Exchange BNB for $ELONAI</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Exchange $BROCK for $BitrockIn</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-559a2551 elementor-widget elementor-widget-text-editor" data-id="559a2551" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Set Slippage To 9% In The Options Menu. Now You Can Swap BNB For $ELONAI . Once You’ve Completed Your Swap Your Tokens Will Be Shown In Your Wallet.</p>						</div>
+							<p>Now You Can Swap your BROCK For $BitrockIn . Once You’ve Completed Your Swap Your Tokens Will Be Shown In Your Wallet just import them using the CA.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -806,9 +806,10 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				<div class="elementor-widget-container">
 			        <div class="eael-adv-accordion" id="eael-adv-accordion-67c40c6b" data-accordion-id="67c40c6b" data-accordion-type="accordion" data-toogle-speed="300">
     <div class="eael-accordion-list">
-                <div id="when-is-token-launch" class="elementor-tab-title eael-accordion-header" tabindex="1741" data-tab="1" aria-controls="elementor-tab-content-1741"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">When is token launch?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1741" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="when-is-token-launch"><p><p>Token launch is at 3 pm utc on 17 April</p></p></div>
+                <div id="when-is-token-launch" class="elementor-tab-title eael-accordion-header" tabindex="1741" data-tab="1" aria-controls="elementor-tab-content-1741"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What is Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1741" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="when-is-token-launch"><p><p>Bitrock Inu is a memecoin created for fun and community engagement within the blockchain space.
+</p></p></div>
                 </div><div class="eael-accordion-list">
-                <div id="usdt-reflections-are-auto-or-manual" class="elementor-tab-title eael-accordion-header" tabindex="1742" data-tab="2" aria-controls="elementor-tab-content-1742"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">USDT Reflections are auto or manual?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1742" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="usdt-reflections-are-auto-or-manual"><p><p>All diamond holders will receive USDT Rewards automatically in their wallet.</p></p></div>
+                <div id="usdt-reflections-are-auto-or-manual" class="elementor-tab-title eael-accordion-header" tabindex="1742" data-tab="2" aria-controls="elementor-tab-content-1742"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">Is Bitrock Inu a investment?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1742" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="usdt-reflections-are-auto-or-manual"><p><p>No, Bitrock Inu is not meant as an investment. It's a community-driven token for entertainment.</p></p></div>
                 </div></div>		</div>
 				</div>
 					</div>
@@ -819,9 +820,9 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				<div class="elementor-widget-container">
 			        <div class="eael-adv-accordion" id="eael-adv-accordion-79505453" data-accordion-id="79505453" data-accordion-type="accordion" data-toogle-speed="300">
     <div class="eael-accordion-list">
-                <div id="smart-contract-is-safe-and-audited" class="elementor-tab-title eael-accordion-header" tabindex="2031" data-tab="1" aria-controls="elementor-tab-content-2031"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">Smart Contract is Safe and Audited?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-2031" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="smart-contract-is-safe-and-audited"><p><p>Yes, Elon AI Contract is Safe and Audited By Coinsult Audit.</p></p></div>
+                <div id="smart-contract-is-safe-and-audited" class="elementor-tab-title eael-accordion-header" tabindex="2031" data-tab="1" aria-controls="elementor-tab-content-2031"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">How can I get Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-2031" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="smart-contract-is-safe-and-audited"><p><p>You can acquire Bitrock Inu through various cryptocurrency exchanges like RockSwap and others where it will be listed.</p></p></div>
                 </div><div class="eael-accordion-list">
-                <div id="when-contract-will-be-renounced" class="elementor-tab-title eael-accordion-header" tabindex="2032" data-tab="2" aria-controls="elementor-tab-content-2032"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">When Contract will be Renounced?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-2032" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="when-contract-will-be-renounced"><p><p>Contract will be Renounced on token launch that means owner can't be able to make any changes in the contract.</p></p></div>
+                <div id="when-contract-will-be-renounced" class="elementor-tab-title eael-accordion-header" tabindex="2032" data-tab="2" aria-controls="elementor-tab-content-2032"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What can I do with Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-2032" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="when-contract-will-be-renounced"><p><p>You can use Bitrock Inu to participate in community events and engage with other supporters.</p></p></div>
                 </div></div>		</div>
 				</div>
 					</div>
@@ -855,7 +856,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 						<i class="fab fa-twitter"></i>					</a>
 				</span>
 							<span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-ea81e7b" href="https://t.me/" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-ea81e7b" href="https://t.me/BitrockInu" target="_blank">
 						<span class="elementor-screen-only">Telegram</span>
 						<i class="fab fa-telegram"></i>					</a>
 				</span>
@@ -891,9 +892,8 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 					<div class="ast-builder-footer-grid-columns site-below-footer-inner-wrap ast-builder-grid-row">
 											<div class="site-footer-below-section-1 site-footer-section site-footer-section-1">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
-				<div class="ast-footer-copyright"><p>Copyright &copy; 2023 ELON ARTIFICIAL INTELLIGENCE<br />
-admin@elonsartificialintelligence.tech
-</p>
+				<div class="ast-footer-copyright"><p>Copyright &copy; 2024 BITROCK INU<br />
+.</p>
 </div>			</div>
 						</div>
 										</div>
