--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.12.1 - 02-04-2023 */
 .elementor-widget-progress{text-align:left}.elementor-progress-wrapper{position:relative;background-color:#eee;color:#fff;height:100%;border-radius:2px}.elementor-progress-bar{display:flex;background-color:#69727d;width:0;font-size:11px;height:30px;line-height:30px;border-radius:2px;transition:width 1s ease-in-out}.elementor-progress-text{flex-grow:1;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;padding-left:15px}.elementor-progress-percentage{padding-right:15px}.elementor-widget-progress .elementor-progress-wrapper.progress-info .elementor-progress-bar{background-color:#5bc0de}.elementor-widget-progress .elementor-progress-wrapper.progress-success .elementor-progress-bar{background-color:#5cb85c}.elementor-widget-progress .elementor-progress-wrapper.progress-warning .elementor-progress-bar{background-color:#f0ad4e}.elementor-widget-progress .elementor-progress-wrapper.progress-danger .elementor-progress-bar{background-color:#d9534f}.elementor-progress .elementor-title{display:block}@media (max-width:767px){.elementor-progress-text{padding-left:10px}}.e-con-inner .elementor-progress-wrapper,.e-con .elementor-progress-wrapper{height:auto}</style>
-					<span class="elementor-title">Lp: 100% Supply</span>
+					<span class="elementor-title">Lp: 90% Supply</span>
 		
 		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-valuetext="">
 			<div class="elementor-progress-bar" data-max="50">
@@ -614,7 +614,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				</div>
 				<div class="elementor-element elementor-element-16f0d2c6 elementor-widget elementor-widget-progress" data-id="16f0d2c6" data-element_type="widget" data-widget_type="progress.default">
 				<div class="elementor-widget-container">
-						<span class="elementor-title">Ticker: BitrockIn</span>
+						<span class="elementor-title">Ticker: BitrockInu</span>
 		
 		<div class="elementor-progress-wrapper" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="33" aria-valuetext="">
 			<div class="elementor-progress-bar" data-max="33">
@@ -771,7 +771,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				</div>
 				<div class="elementor-element elementor-element-3cad61d8 elementor-widget elementor-widget-heading" data-id="3cad61d8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Exchange $BROCK for $BitrockIn</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Exchange $BROCK for $BitrockInu</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-559a2551 elementor-widget elementor-widget-text-editor" data-id="559a2551" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
@@ -809,7 +809,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
                 <div id="when-is-token-launch" class="elementor-tab-title eael-accordion-header" tabindex="1741" data-tab="1" aria-controls="elementor-tab-content-1741"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What is Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1741" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="when-is-token-launch"><p><p>Bitrock Inu is a memecoin created for fun and community engagement within the blockchain space.
 </p></p></div>
                 </div><div class="eael-accordion-list">
-                <div id="usdt-reflections-are-auto-or-manual" class="elementor-tab-title eael-accordion-header" tabindex="1742" data-tab="2" aria-controls="elementor-tab-content-1742"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">Is Bitrock Inu a investment?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1742" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="usdt-reflections-are-auto-or-manual"><p><p>No, Bitrock Inu is not meant as an investment. It's a community-driven token for entertainment.</p></p></div>
+                <div id="usdt-reflections-are-auto-or-manual" class="elementor-tab-title eael-accordion-header" tabindex="1742" data-tab="2" aria-controls="elementor-tab-content-1742"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">Is Bitrock Inu an investment?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1742" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="usdt-reflections-are-auto-or-manual"><p><p>No, Bitrock Inu is not meant as an investment. It's a community-driven token for entertainment.</p></p></div>
                 </div></div>		</div>
 				</div>
 					</div>
@@ -893,7 +893,7 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 											<div class="site-footer-below-section-1 site-footer-section site-footer-section-1">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
 				<div class="ast-footer-copyright"><p>Copyright &copy; 2024 BITROCK INU<br />
-.</p>
+This website, the roadmap and Bitrock Inu is not intended as financial or investment advice and do your own research before buying.</p>
 </div>			</div>
 						</div>
 										</div>
