--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.12.1 - 02-04-2023 */
 .elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#69727d;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#69727d;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:left;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style>
-					<div class="content-inner" dir="auto"><div class="text-content clearfix with-meta" dir="auto">Bitrock Inu is a memecoin created to celebrate the fun and creativity of the blockchain community. Designed for enthusiasts and supporters, it emphasizes community engagement and shared experiences. This description is not intended as investment advice; Bitrock Inu is purely a community-driven token. </div></div><div class="svg-appendix"> </div>						</div>
+					<div class="content-inner" dir="auto"><div class="text-content clearfix with-meta" dir="auto">Bitrock Inu is a memecoin created to celebrate the fun and creativity of the blockchain community. Designed for enthusiasts and supporters, it emphasizes community engagement and shared experiences. Bitrock Inu is purely a community-driven token. </div></div><div class="svg-appendix"> </div>						</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-15b097c3 elementor-section-boxed elementor-section-height-default elementor-section-height-default wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no" data-id="15b097c3" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
@@ -892,7 +892,7 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 					<div class="ast-builder-footer-grid-columns site-below-footer-inner-wrap ast-builder-grid-row">
 											<div class="site-footer-below-section-1 site-footer-section site-footer-section-1">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
-				<div class="ast-footer-copyright"><p>Copyright &copy; 2024 BITROCK INU<br />
+				<div class="ast-footer-copyright"><p>Copyright &copy; 2024 All rights reserved BITROCK INU. made with love by @PopCatDev<br />
 Our roadmap is not definitive and is subject to change. And Bitrock Inu is not intended as financial or investment advice and do your own research before buying.</p>
 </div>			</div>
 						</div>
