--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 				</div>
 				<div class="elementor-element elementor-element-7b1434c1 elementor-widget elementor-widget-text-editor" data-id="7b1434c1" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>CEX Listing </p><p>NFTs</p><p>Influencer Awareness& Partnerships</p>	</div>
+							<p>CEX Listing </p><p>NFTs</p><p>Influencer Awareness & Partnerships</p>	</div>
 				</div>
 					</div> 
 		</div>
@@ -809,7 +809,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
                 <div id="when-is-token-launch" class="elementor-tab-title eael-accordion-header" tabindex="1741" data-tab="1" aria-controls="elementor-tab-content-1741"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What is Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1741" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="when-is-token-launch"><p><p>Bitrock Inu is a memecoin created for fun and community engagement within the blockchain space.
 </p></p></div>
                 </div><div class="eael-accordion-list">
-                <div id="usdt-reflections-are-auto-or-manual" class="elementor-tab-title eael-accordion-header" tabindex="1742" data-tab="2" aria-controls="elementor-tab-content-1742"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">Is Bitrock Inu an investment?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1742" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="usdt-reflections-are-auto-or-manual"><p><p>No, Bitrock Inu is not meant as an investment. It's a community-driven token for entertainment.</p></p></div>
+                <div id="usdt-reflections-are-auto-or-manual" class="elementor-tab-title eael-accordion-header" tabindex="1742" data-tab="2" aria-controls="elementor-tab-content-1742"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What about the roadmap??</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1742" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="usdt-reflections-are-auto-or-manual"><p><p>Bitrock Inu focuses on community fun and engagement rather than a formal development roadmap. However, community-driven events and activities are regularly planned and announced.</p></p></div>
                 </div></div>		</div>
 				</div>
 					</div>
@@ -892,8 +892,8 @@ class="site-footer" id="colophon" itemtype="https://schema.org/WPFooter" itemsco
 					<div class="ast-builder-footer-grid-columns site-below-footer-inner-wrap ast-builder-grid-row">
 											<div class="site-footer-below-section-1 site-footer-section site-footer-section-1">
 								<div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
-				<div class="ast-footer-copyright"><p>Copyright &copy; 2024 All rights reserved BITROCK INU. made with love by @PopCatDev<br />
-Our roadmap is not definitive and is subject to change. And Bitrock Inu is not intended as financial or investment advice and do your own research before buying.</p>
+				<div class="ast-footer-copyright"><p>Copyright &copy; 2024 All rights reserved BITROCK INU.<br />
+Our roadmap is not definitive and is subject to change. The contents of this website and Bitrock Inu is not intended as financial or investment advice and do your own research before buying.</p>
 </div>			</div>
 						</div>
 										</div>
