--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-3030f484 elementor-widget elementor-widget-image" data-id="3030f484" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img id="anim" src="https://media.tenor.com/-e2ynMjTfzUAAAAi/animal-shiba.gif" alt="pop" style="width: 100px; height: auto;" />															</div>
+															<img id="anim" src="https://media.tenor.com/CmV1NhzEAXIAAAAi/animal-shiba.gif" alt="pop" style="width: 100px; height: auto;" />															</div>
 				</div>
 				<div class="elementor-element elementor-element-110c522a elementor-widget elementor-widget-heading" data-id="110c522a" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -1013,7 +1013,7 @@ var WprConfig = {"ajaxurl":"https:\/\/elonmuskceo.net\/wp-admin\/admin-ajax.php"
 <!-- Popup Message Container -->
 <div id="popup-container">
   <div id="popup-message">
-    <p>This is your popup message!</p>
+    <p>Bitrock Inu is not an investment and is not intended as financial advice and is created as a meme parody and community-driven token. It has no intrinsic value or expectations of financial return. Bitrock Inu makes no promises and is not responsible for any losses or errors use at your own risk. Cryptocurrency including Bitrock Inu may result in a 100% total loss. Do your own research before buying.</p>
   </div>
   <button id="close-button" onclick="togglePopup()">Close</button>
 </div>
