--- a/index.html
+++ b/index.html
@@ -858,9 +858,8 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
     <div class="eael-accordion-list">
                 <div id="when-is-token-launch" class="elementor-tab-title eael-accordion-header" tabindex="1741" data-tab="1" aria-controls="elementor-tab-content-1741"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What is Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1741" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="when-is-token-launch"><p><p>Bitrock Inu is a memecoin created for fun and community engagement within the blockchain space.
 </p></p></div>
-                </div><div class="eael-accordion-list">
-                <div id="usdt-reflections-are-auto-or-manual" class="elementor-tab-title eael-accordion-header" tabindex="1742" data-tab="2" aria-controls="elementor-tab-content-1742"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What about the roadmap??</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1742" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="usdt-reflections-are-auto-or-manual"><p><p>Bitrock Inu focuses on community fun and engagement rather than a formal development roadmap. However, community-driven events and activities are regularly planned and announced.</p></p></div>
-                </div></div>		</div>
+                </div>
+				</div>		</div>
 				</div>
 					</div>
 		</div>
