--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@ var WprConfig = {"ajaxurl":"https:\/\/elonmuskceo.net\/wp-admin\/admin-ajax.php"
 <!-- Popup Message Container -->
 <div id="popup-container">
   <div id="popup-message">
-    <p>Bitrock Inu is not an investment and is not intended as financial advice and is created as a meme parody and community-driven token. It has no intrinsic value or expectations of financial return. Bitrock Inu makes no promises and is not responsible for any losses or errors use at your own risk. Cryptocurrency including Bitrock Inu may result in a 100% total loss. Do your own research before buying.</p>
+    <p>Bitrock Inu is not an investment and is not intended as financial advice and is created as a meme parody and community-driven token. It has no intrinsic value or expectations of financial return. Bitrock Inu makes no promises and is not responsible for any losses or errors use at your own risk. Cryptocurrency including Bitrock Inu may result in a 100% total loss. Do your own research before buying. the roadmap is not definitive and is subject to change</p>
   </div>
   <button id="close-button" onclick="togglePopup()">Close</button>
 </div>
