--- a/index.html
+++ b/index.html
@@ -857,18 +857,7 @@ class="post-10 page type-page status-publish ast-article-single" id="post-10" it
 			        <div class="eael-adv-accordion" id="eael-adv-accordion-67c40c6b" data-accordion-id="67c40c6b" data-accordion-type="accordion" data-toogle-speed="300">
     <div class="eael-accordion-list">
                 <div id="when-is-token-launch" class="elementor-tab-title eael-accordion-header" tabindex="1741" data-tab="1" aria-controls="elementor-tab-content-1741"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What is Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-1741" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="when-is-token-launch"><p><p>Bitrock Inu is a memecoin created for fun and community engagement within the blockchain space.
-</p></p></div>
-                </div>
-				</div>		</div>
-				</div>
-					</div>
-		</div>
-				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-6946ee" data-id="6946ee" data-element_type="column">
-			<div class="elementor-widget-wrap elementor-element-populated">
-								<div class="elementor-element elementor-element-79505453 elementor-widget elementor-widget-eael-adv-accordion" data-id="79505453" data-element_type="widget" data-widget_type="eael-adv-accordion.default">
-				<div class="elementor-widget-container">
-			        <div class="eael-adv-accordion" id="eael-adv-accordion-79505453" data-accordion-id="79505453" data-accordion-type="accordion" data-toogle-speed="300">
-    <div class="eael-accordion-list">
+			</div><div class="eael-accordion-list">
                 <div id="smart-contract-is-safe-and-audited" class="elementor-tab-title eael-accordion-header" tabindex="2031" data-tab="1" aria-controls="elementor-tab-content-2031"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">How can I get Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-2031" class="eael-accordion-content clearfix" data-tab="1" aria-labelledby="smart-contract-is-safe-and-audited"><p><p>You can acquire Bitrock Inu through various cryptocurrency exchanges like RockSwap and others where it will be listed.</p></p></div>
                 </div><div class="eael-accordion-list">
                 <div id="when-contract-will-be-renounced" class="elementor-tab-title eael-accordion-header" tabindex="2032" data-tab="2" aria-controls="elementor-tab-content-2032"><span class="eael-advanced-accordion-icon-closed"><i aria-hidden="true" class="fa-accordion-icon fas fa-plus"></i></span><span class="eael-advanced-accordion-icon-opened"><i aria-hidden="true" class="fa-accordion-icon fas fa-minus"></i></span><span class="eael-accordion-tab-title">What can I do with Bitrock Inu?</span><i aria-hidden="true" class="fa-toggle fas fa-angle-right"></i></div><div id="elementor-tab-content-2032" class="eael-accordion-content clearfix" data-tab="2" aria-labelledby="when-contract-will-be-renounced"><p><p>You can use Bitrock Inu to participate in community events and engage with other supporters.</p></p></div>
