--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="https://gmpg.org/xfn/11">
 
-<title>Bitrock Inu &#8211; Bitrock Inu on Bitrock</title>
+<title>Happy Bear Inu &#8211; on Bitrock</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
 <link rel="alternate" type="application/rss+xml" title="Elon Musk CEO &raquo; Feed" href="feed/index.html" />
@@ -257,7 +257,7 @@ class="hfeed site" id="page">
 					<div class="ast-site-title-wrap">
 						<h1 class="site-title" itemprop="name">
 				<a href="index.html" rel="home" itemprop="url" >
-					Bitrock Inu
+					Happy Bear Inu
 				</a>
 			</h1>
 						
