--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ class="hfeed site" id="page">
 					<div class="ast-site-title-wrap">
 						<span class="site-title" itemprop="name">
 				<a href="index.html" rel="home" itemprop="url" >
-					Bitrock Inu
+					Happy Bear Inu
 				</a>
 			</span>
 						
